@@ -1673,10 +1673,6 @@ public class ArrayUtils {
     }
 
     @Nullable
-    /**
-     * TODO: Get rid of Long variable instantiation
-     * FIXME: Remove instantiation and use Long.valueOf() instead.
-     */
     public static Long[] toObject(@Nullable long[] array) {
         if (array == null) {
             return null;
@@ -1685,7 +1681,7 @@ public class ArrayUtils {
         }
         final Long[] result = new Long[array.length];
         for (int i = 0; i < array.length; i++) {
-            result[i] = new Long(array[i]);
+            result[i] = Long.valueOf(array[i]);
         }
         return result;
     }
